# Pixaloop

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_test.xml
app/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle  local.properties
sdk/java/: AndroidManifest.xml
sdk/java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
sdk/java/javadoc/org/opencv/android/: BaseLoaderCallback.html  Camera2Renderer.html  CameraActivity.html  CameraBridgeViewBase.CvCameraViewFrame.html  CameraBridgeViewBase.CvCameraViewListener.html  CameraBridgeViewBase.CvCameraViewListener2.html  CameraBridgeViewBase.ListItemAccessor.html  CameraBridgeViewBase.html  CameraGLRendererBase.html  CameraGLSurfaceView.CameraTextureListener.html  CameraGLSurfaceView.html  CameraRenderer.html  FpsMeter.html  InstallCallbackInterface.html  JavaCamera2View.JavaCameraSizeAccessor.html  JavaCamera2View.html  JavaCameraView.JavaCameraSizeAccessor.html  (+7 more)
sdk/native/jni/: OpenCVConfig.cmake
sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules.cmake
sdk/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
(+512 files in other folders)
